<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TasteSpinner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="roulette">Roulette</string>
    <string name="arrow">arrow</string>
    <string name="filter">Filter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="welcomepage">Home page</string>
    <string name="map">Map</string>
    <string name="favorite">Favorite</string>
    <string name="bug">Bug</string>
    <string name="qanda" translatable="false"><![CDATA[Q&A]]></string>
    <string name="other">Other</string>
    <string name="rating_star" translatable="false">Star</string>
    <string-array name="preferences">
        <item>Open</item>
    </string-array>
    <string name="dsgvo">privacy policy</string>
    <string name="req_permission">Requires Permission</string>
    <string name="bug_input">Please describe the bug</string>
    <string name="report">Report</string>
    <string name="msg_sent">Message sent</string>
    <string name="questions">Questions</string>
    <string name="msg_questions">Please enter your question and an email to reply</string>
    <string name="transmit">Transmit</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="ok">OK</string>
</resources>