<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_roulette"
        android:title="@string/roulette"
        android:icon="@drawable/roulette"/>

    <item
        android:id="@+id/nav_maps"
        android:title="@string/map"
        android:icon="@drawable/ic_baseline_map_24"/>
    <item
        android:id="@+id/nav_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"/>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_bug"
                android:title="@string/bug"
                android:icon="@drawable/ic_baseline_report_problem_24"/>
            <item
                android:id="@+id/nav_questions"
                android:title="@string/qanda"
                android:icon="@drawable/ic_baseline_question_mark_24"/>
        </menu>
    </item>

</menu>